--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -152,6 +152,14 @@
         .title
       .content
       .ad-bar
+      .mobile-footer
+        p Share This:
+        span.st_facebook_large
+        span.st_twitter_large
+        span.st_linkedin_large
+        span.st_digg_large
+        span.st_google_bmarks_large
+        span.st_stumbleupon_large
   
   #dialog-invalid-drag title="Oops"
     p
