--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -121,6 +121,13 @@ body
     font-size: 11px
     word-wrap: break-word
 
+.mobile-footer
+  height: 70px
+  padding: 10px 0
+  p
+    margin: 0 0 10px 0
+    padding-left: 5px
+
 #templates
   display: none
 
