--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -115,6 +115,13 @@ body {
     font-size: 11px;
     word-wrap: break-word; }
 
+.mobile-footer {
+  height: 70px;
+  padding: 10px 0; }
+  .mobile-footer p {
+    margin: 0 0 10px 0;
+    padding-left: 5px; }
+
 #templates {
   display: none; }
 
