Added google plus one

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -160,6 +160,8 @@
         span.st_digg_large
         span.st_google_bmarks_large
         span.st_stumbleupon_large
+        erb:
+          <div class="g-plus-one"><g:plusone count="false"></g:plusone></div>
   
   #dialog-invalid-drag title="Oops"
     p
