--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -121,6 +121,11 @@ body {
   .mobile-footer p {
     margin: 0 0 10px 0;
     padding-left: 5px; }
+  .mobile-footer .g-plus-one {
+    display: inline;
+    position: relative;
+    top: -4px;
+    left: 4px; }
 
 #templates {
   display: none; }
