--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -127,6 +127,11 @@ body
   p
     margin: 0 0 10px 0
     padding-left: 5px
+  .g-plus-one
+    display: inline
+    position: relative
+    top: -4px
+    left: 4px
 
 #templates
   display: none
