Mobile header styling

--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -4,7 +4,7 @@
   .tab-bar
     table
       tr
-        td.active.go-home
+        td.go-home
           a href="#" Home
         td.wtab
         td.wtab
