--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -96,7 +96,7 @@
   script.tab-bar(type="text/template")
     table
       tr
-        td.active.go-home
+        td.go-home
           a href="#" Home
         td.wtab
           div {{ prettyTabs[0] }}
