--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -4,6 +4,7 @@
     .inner
       .icon.dbx-handle{ style="background-image: url(/images/widgets/{{ iconName }}.png)" }
       .title {{ prettyName }}
+      .invalid-icon
   
   script.mapp-header(type="text/template")
     table
