--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -85,7 +85,13 @@
     font-weight: bold
 
 .home-icon.invalid
-  background-color: #E83D05
+  .invalid-icon
+    position: relative
+    width: 32px
+    height: 32px
+    top: -94px
+    left: 37px
+    background: url(/images/ui/invalid-for-showing.png)
 
 #builder-container
   background: $light-bg-color
