Fixed mobile view resizing bug

--- a/app/views/shared/_mobile-data-loader.html.erb
+++ b/app/views/shared/_mobile-data-loader.html.erb
@@ -12,6 +12,7 @@ window.googleAfmcRequest = {
 window.g = {
   width: 320,
   height: 480,
+  topBarMaxHeight: 192,
   couchLocation: '<%=escape_javascript @company.couch_host %>',
   db_name: '<%=escape_javascript @company.db_name %>',
   company: '<%=escape_javascript @company.name %>'
