Added new share footer to mobile app and also desktop app

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -26,6 +26,7 @@ html
         #content
           = yield
         .clearfix
+        = render 'shared/footer'
     
     = javascript_include_tag 'support/underscore'
     = javascript_include_tag 'support/jquery-1.6.1.min'
