--- a/app/views/layouts/mobile.slim
+++ b/app/views/layouts/mobile.slim
@@ -1,7 +1,7 @@
 ! doctype 5
 html
   head
-    title YoMobi
+    title = "#{@company.name} - Mobile Website - Yomobi"
     = render 'shared/iphone-meta.html'
     = stylesheet_link_tag 'mobile'
     meta name="keywords" content=@company.keywords
