--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -139,8 +139,22 @@ p.success
   max-width: 270px
   font-size: 14px
 
+#footer
+  border-top: 1px solid $light-border
+  margin: 20px auto
+  padding: 10px 10px 0
+
+.social-share
+  margin: 0
+    padding: 0 0 0 5px
+  list-style: none
+  li
+    float: left
+    cursor: pointer
+    margin-right: 8px
+
 .hr
-  border-top: 1px solid #b3b3b3
+  border-top: 1px solid $light-border
   padding-top: 14px
 
 .lfloat
