--- a/public/stylesheets/sass/constants.sass
+++ b/public/stylesheets/sass/constants.sass
@@ -5,6 +5,8 @@ $highlight-color: #D8DFEA
 
 $header-font-color: #FFF
 
+$light-border: #b3b3b3
+
 $page-width: 960px
 $sidebar-width: 200px
 $emulator-width: 340px
