--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -25,6 +25,7 @@ html
         #content
           = yield
         .clearfix
+        = render 'shared/footer'
     
     = render 'shared/templates'
     
