--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -162,7 +162,7 @@
   .action-bar
     padding: 12px 0 0
     margin: 0 auto
-    border-top: 1px solid #b3b3b3
+    border-top: 1px solid $light-border
   .accept-btn
     float: right
   .remove-link
