Fixed mobile social share css bug

--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -132,6 +132,15 @@ body
 #aritcaptcha-container
   height: 60px
 
+.social-share
+  margin: 0
+  padding: 0 0 0 5px
+  list-style: none
+  li
+    float: left
+    cursor: pointer
+    margin-right: 8px
+
 .clearfix
   clear: both
 
