--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -126,6 +126,15 @@ body {
 #aritcaptcha-container {
   height: 60px; }
 
+.social-share {
+  margin: 0;
+  padding: 0 0 0 5px;
+  list-style: none; }
+  .social-share li {
+    float: left;
+    cursor: pointer;
+    margin-right: 8px; }
+
 .clearfix {
   clear: both; }
 
