--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -75,11 +75,13 @@ body
     cursor: pointer
 
 .ad-bar
-  padding: 4px 0
+  padding: 0 0
   border-top: 2px solid $secondary-color
   border-bottom: 2px solid $secondary-color
   background: $color-topbar
   text-align: center
+  &.bottom
+    height: 48px
 
 .back-btn
   float: left
