--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -143,7 +143,7 @@ p.success {
 
 .social-share {
   margin: 0;
-    margin-padding: 0 0 0 5px;
+  padding: 0 0 0 5px;
   list-style: none; }
   .social-share li {
     float: left;
