Fixed a bug where moving cats was not registering

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -525,8 +525,8 @@
     input type="button" name="rename_cat" value="Rename"
     input type="button" name="rem_cat" value="Delete"
     | <%       } if (cats.length >= 2) { %>
-    input.rfloat type="button" name="down_item" data-mod="1" value="Down"
-    input.rfloat type="button" name="up_item" data-mod="-1" value="Up"
+    input.rfloat type="button" name="down_cat" data-mod="1" value="Down"
+    input.rfloat type="button" name="up_cat" data-mod="-1" value="Up"
     | <%       } %>
     br
     br
@@ -572,8 +572,8 @@
     input type="button" name="rename_cat" value="Rename"
     input type="button" name="rem_cat" value="Delete"
     | <%       } if (cats.length >= 2) { %>
-    input.rfloat type="button" name="down_item" data-mod="1" value="Down"
-    input.rfloat type="button" name="up_item" data-mod="-1" value="Up"
+    input.rfloat type="button" name="down_cat" data-mod="1" value="Down"
+    input.rfloat type="button" name="up_cat" data-mod="-1" value="Up"
     | <%       } %>
 
     br
