--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -264,6 +264,10 @@
   height: 480px
   width: 335px
 
+.separator
+  border-top: 1px solid $light-border
+  margin: 10px 0
+
 /////////////////////////////
 // Widget-specific styling //
 /////////////////////////////
