--- a/app/views/shared/_category-templates.slim
+++ b/app/views/shared/_category-templates.slim
@@ -20,7 +20,7 @@ script.menu-item-dialog(type="text/template")
     | <% } if(flash.success) { %>
     p.success {{ flash.success }}
     | <% } if (addedItems.length > 0) { %>
-    .clearfix.separator style="margin-top: 15px"
+    .clearfix.divider style="margin-top: 15px"
     .other-names
       b Added Items:
       ul
@@ -51,7 +51,7 @@ script.services-item-dialog(type="text/template")
     | <% } if(flash.success) { %>
     p.success {{ flash.success }}
     | <% } if (addedItems.length > 0) { %>
-    .clearfix.separator style="margin-top: 15px"
+    .clearfix.divider style="margin-top: 15px"
     .other-names
       b Added Items:
       ul
@@ -82,7 +82,7 @@ script.products-item-dialog(type="text/template")
     | <% } if(flash.success) { %>
     p.success {{ flash.success }}
     | <% } if (addedItems.length > 0) { %>
-    .clearfix.separator style="margin-top: 15px"
+    .clearfix.divider style="margin-top: 15px"
     .other-names
       b Added Items:
       ul
@@ -125,7 +125,7 @@ script.property-listings-item-dialog(type="text/template")
     | <% } if(flash.success) { %>
     p.success {{ flash.success }}
     | <% } if (addedItems.length > 0) { %>
-    .clearfix.separator style="margin-top: 15px"
+    .clearfix.divider style="margin-top: 15px"
     .other-names
       b Added Items:
       ul
@@ -160,7 +160,7 @@ script.locations-item-dialog(type="text/template")
     | <% } if(flash.success) { %>
     p.success {{ flash.success }}
     | <% } if (addedItems.length > 0) { %>
-    .clearfix.separator style="margin-top: 15px"
+    .clearfix.divider style="margin-top: 15px"
     .other-names
       b Added Items:
       ul
