--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -194,3 +194,8 @@ body
     background: url(/images/ui/subcat-arrow.png)
   .leaf-arrow
     background: url(/images/ui/leaf-arrow.png)
+  .divider
+    height: 5px
+    border-top: 1px solid #b3b3b3
+    background: #ddd
+    margin: 0
