--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -150,7 +150,7 @@
   #builder .widget-editor .action-bar {
     padding: 12px 0 0;
     margin: 0 auto;
-    border-top: 1px solid #dddddd; }
+    border-top: 1px solid #b3b3b3; }
   #builder .widget-editor .accept-btn {
     float: right; }
   #builder .widget-editor .remove-link {
@@ -251,8 +251,8 @@
   height: 480px;
   width: 335px; }
 
-.separator {
-  border-top: 1px solid #dddddd;
+.divider {
+  border-top: 1px solid #b3b3b3;
   margin: 10px 0; }
 
 #builder .edit-area.hours .day-checkbox {
