Lots of ui tweaks

--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -133,11 +133,12 @@ p.success
   border: 1px dashed #000
 
 #simpleTooltip
-  padding: 7px
+  padding: 4px 0px 4px 4px
+  margin: 0
   border: 1px solid #DD3C10
-  background: #FFEBE8
-  max-width: 270px
-  font-size: 14px
+  background: #f8e6e0
+  max-width: 175px
+  font-size: 11px
 
 #footer
   border-top: 1px solid $light-border
