--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -9,6 +9,7 @@
     list-style: none
     padding-left: 0
     margin: 54px 0 10px 0
+    font-size: 12px
   .spacer
     border-top: 1px solid #ddd
     margin: 5px 0
@@ -20,7 +21,7 @@
       float: left
       width: 16px
       height: 16px
-      margin-right: 4px
+      margin: -1px 4px 0 0
       background: url(/images/test-icons.png)
     &:hover
       background-color: $highlight-color
@@ -42,14 +43,15 @@
     cursor: pointer
     .title
       width: auto
-      padding: 2px 0 0 4px
+      padding: 2.5px 0 0 4px
       text-align: left
       height: auto
+      font-size: 12px
     .icon
       margin: 0
       float: left
-      width: 16px
-      height: 16px
+      width: 18px
+      height: 18px
   .home-icon:hover
     background: #ffff00
   .home-icon.singletonInUse
@@ -90,8 +92,8 @@
     width: 32px
     height: 32px
     top: -94px
-    left: 37px
-    background: url(/images/ui/invalid-for-showing.png)
+    left: 40px
+    background: url(/images/ui/invalid-for-showing.png) no-repeat
 
 #builder-container
   background: $light-bg-color
