--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -4,7 +4,8 @@
   #sidebar ul {
     list-style: none;
     padding-left: 0;
-    margin: 54px 0 10px 0; }
+    margin: 54px 0 10px 0;
+    font-size: 12px; }
   #sidebar .spacer {
     border-top: 1px solid #dddddd;
     margin: 5px 0; }
@@ -16,7 +17,7 @@
       float: left;
       width: 16px;
       height: 16px;
-      margin-right: 4px;
+      margin: -1px 4px 0 0;
       background: url(/images/test-icons.png); }
     #sidebar .option:hover {
       background-color: #d8dfea;
@@ -37,14 +38,15 @@
     cursor: pointer; }
     #sidebar .home-icon .title {
       width: auto;
-      padding: 2px 0 0 4px;
+      padding: 2.5px 0 0 4px;
       text-align: left;
-      height: auto; }
+      height: auto;
+      font-size: 12px; }
     #sidebar .home-icon .icon {
       margin: 0;
       float: left;
-      width: 16px;
-      height: 16px; }
+      width: 18px;
+      height: 18px; }
   #sidebar .home-icon:hover {
     background: yellow; }
   #sidebar .home-icon.singletonInUse {
@@ -82,8 +84,8 @@
   width: 32px;
   height: 32px;
   top: -94px;
-  left: 37px;
-  background: url(/images/ui/invalid-for-showing.png); }
+  left: 40px;
+  background: url(/images/ui/invalid-for-showing.png) no-repeat; }
 
 #builder-container {
   background: #edeff4;
