--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -190,6 +190,9 @@
       font-size: 1.5em;
       width: 250px; }
 
+#builder .panel {
+  padding: 0 0 10px 10px; }
+
 #emulator-wrapper {
   float: left;
   width: 340px; }
