--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -18,7 +18,7 @@ body {
     float: left;
     width: 320px; }
     #canvas .page .content {
-      padding: 0 4px;
+      padding: 8px 4px;
       font-size: 16px; }
     #canvas .page p.error {
       margin-bottom: 0;
@@ -51,7 +51,7 @@ body {
 .tab-bar {
   background: #3b5998;
   color: white;
-  padding: 0 4px; }
+  padding: 0 4px 4px 0; }
   .tab-bar table {
     width: 100%; }
   .tab-bar a, .tab-bar a:visited {
@@ -117,10 +117,13 @@ body {
 
 .mobile-footer {
   height: 70px;
-  padding: 8px 0; }
+  padding: 12px 0 0 0; }
   .mobile-footer p {
     margin: 0 0 10px 0;
     padding-left: 5px; }
+  .mobile-footer .powered-by {
+    font-size: 11px;
+    text-align: center; }
 
 #templates {
   display: none; }
@@ -135,7 +138,7 @@ body {
   .social-share li {
     float: left;
     cursor: pointer;
-    margin-right: 8px; }
+    margin-right: 12px; }
 
 .clearfix {
   clear: both; }
