--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -202,6 +202,9 @@
       font-size: 1.5em
       width: 250px
 
+#builder .panel
+  padding: 0 0 10px 10px
+
 #emulator-wrapper
   float: left
   width: $emulator-width
