--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -22,7 +22,7 @@ body
     float: left
     width: $dynamic-width
     .content
-      padding: 0 4px
+      padding: 8px 4px
       font-size: 16px
     p.error
       margin-bottom: 0
@@ -56,7 +56,7 @@ body
 .tab-bar
   background: $color-topbar
   color: #fff
-  padding: 0 4px
+  padding: 0 4px 4px 0
   table
     width: 100%
   a, a:visited
@@ -123,10 +123,13 @@ body
 
 .mobile-footer
   height: 70px
-  padding: 8px 0
+  padding: 12px 0 0 0
   p
     margin: 0 0 10px 0
     padding-left: 5px
+  .powered-by
+    font-size: 11px
+    text-align: center
 
 #templates
   display: none
@@ -141,7 +144,7 @@ body
   li
     float: left
     cursor: pointer
-    margin-right: 8px
+    margin-right: 12px
 
 .clearfix
   clear: both
