--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -76,7 +76,10 @@
   padding: 10px 20px; }
   #signin-box h2 {
     border-bottom: 1px solid #cccccc;
-    padding-bottom: 4px; }
+    padding-bottom: 4px;
+    margin: 5px 0 5px 0; }
+  #signin-box h3 {
+    margin: 5px 0 5px 0; }
   #signin-box .login-error {
     margin: 25px 0 15px;
     padding: 10px;
