--- a/public/stylesheets/jquery.wysiwyg.css
+++ b/public/stylesheets/jquery.wysiwyg.css
@@ -63,6 +63,7 @@ div.wysiwyg ul.toolbar li.removeFormat { background-position: -80px -63px; }
 div.wysiwyg ul.toolbar li.empty { background-position: -64px -80px; }
 
 div.wysiwyg iframe { border: 1px solid #999; clear: left;
+height: 292px;
 -moz-box-shadow    :inset 0 0 10px rgba(0, 0, 0, 0.4);
 -webkit-box-shadow :inset 0 0 10px rgba(0, 0, 0, 0.4);
 box-shadow         :inset 0 0 10px rgba(0, 0, 0, 0.4);
