--- a/public/stylesheets/sass/signup.sass
+++ b/public/stylesheets/sass/signup.sass
@@ -161,7 +161,8 @@
   input[type=text]
     margin-bottom: 10px
   textarea
-    height: 10em
+    height: 7em
+    line-height: 110%
   .site-url
     span
       font-size: 1.5em
