--- a/public/stylesheets/flick/jquery-ui-1.8.11.custom.css
+++ b/public/stylesheets/flick/jquery-ui-1.8.11.custom.css
@@ -304,7 +304,7 @@
 .ui-dialog { position: absolute; padding: 0; width: 300px; overflow: hidden; border-color: #4E5E80; }
 .ui-dialog .ui-dialog-titlebar { padding: .4em 1em; position: relative; background: #6E84B5; color: #f2f2f2; border: none; border-radius: 0; }
 .ui-dialog .ui-dialog-title { float: left; margin: .1em 16px .1em 0; } 
-.ui-dialog .ui-dialog-titlebar-close { position: absolute; right: .3em; top: 50%; width: 19px; margin: -10px 0 0 0; padding: 1px; height: 18px; }
+.ui-dialog .ui-dialog-titlebar-close { display:none; position: absolute; right: .3em; top: 50%; width: 19px; margin: -10px 0 0 0; padding: 1px; height: 18px; }
 .ui-dialog .ui-dialog-titlebar-close span { display: block; margin: 1px; }
 .ui-dialog .ui-dialog-titlebar-close:hover, .ui-dialog .ui-dialog-titlebar-close:focus { padding: 0; }
 .ui-dialog .ui-dialog-content { position: relative; border: 0; padding: .5em 1em; background: none; overflow: auto; zoom: 1; }
