Added hyperlink inserter

--- a/app/views/builder/index.slim
+++ b/app/views/builder/index.slim
@@ -8,6 +8,7 @@
   = javascript_include_tag 'builder-app'
   
   = javascript_include_tag 'support/jquery.wysiwyg'
+  = javascript_include_tag 'support/jquery.wysiwyg.link'
 
 h1 = @company.name
 #builder-container
