--- a/public/stylesheets/jquery.wysiwyg.css
+++ b/public/stylesheets/jquery.wysiwyg.css
@@ -70,3 +70,10 @@ box-shadow         :inset 0 0 10px rgba(0, 0, 0, 0.4);
 background-color:white; padding:3px; margin:0;
 }
 
+.wysiwyg label {
+  float: left;
+  width: 75px;
+  padding-top: 4px;
+  clear: left;
+}
+.wysiwyg input[type=text] { float: left; }
